--- a/homework/Week2/fashion_blog_part1/style.css
+++ b/homework/Week2/fashion_blog_part1/style.css
@@ -1,11 +1,15 @@
 
 
+#wrapper {
+	width: 750px;
+	margin: 0 auto;
+
+}
+
 header h1 a {
 	color: #CC0000;
 	font-family:'Open Sans', serif;
 	font-size: 45px;
-	margin: 40px 0px;
-	padding: 80px 0px 0px;
 	text-decoration: none;
 }
 
@@ -15,6 +19,7 @@ h2 {
 	font-size: 25px;
 	padding: 0px;
 }
+
 
 h3 {
 	color: #CCCCCD;
@@ -32,7 +37,25 @@ h4 a {
 	margin: -20px 0px 20px 0px;
 }
 
+h5 {
+	color: #71787A;
+	font-family: 'Roboto Condensed', serif;
+	font-size: 17px;
+	padding: 0px;
+}
+
+
 a.next {
+	text-align:right;
+	display: block;
+	color: #CC0000;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 15px;
+	padding: 0px;
+	text-decoration: none;
+}
+
+a.more {
 	text-align:right;
 	display: block;
 	color: #CC0000;
@@ -50,6 +73,15 @@ hr {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
+
+article p {
+	font-family: 'Open Sans';
+	font-size: 17px;
+	line-height: 27px;
+	color: #383A3B;
+}
+
+
 article p:first-letter{
 	font-family: 'Quicksand', serif;
 	font-size: 90px;
@@ -58,10 +90,11 @@ article p:first-letter{
 	line-height: 0.9;
 }
 
-p {
+aside p {
 	font-family: 'Open Sans';
-	font-size: 17px;
-	line-height: 27px;
+	font-size: 14px;
+	color: #71787A;
+	line-height: 21px;
 }
 
 img {
@@ -70,17 +103,34 @@ img {
 	padding-bottom: 5px;
 }
 
+#box {
+	font: 'Nixie One', Serif;
+	font-size: 75px;
+	color: #A2A5A6;
+	width: 200px;
+	margin: 30px 10px;
+	border: solid 20px #CCCECF;
+	padding: 30px;
+	background-color: #CCCECF;
+}
+
+.popularposts li a {
+	font-family: 'Open Sans';
+	font-size: 15px;
+	color: #CC0000;
+	text-decoration: none;
+}
+
 header nav a {
 	color: #DADADB;
 	font-family: 'Open Sans', serif;
-	font-size: 22px;
-	padding-right: 18px;
-}
-
-#wrapper {
-	width: 690px;
-	margin: 0 auto;
-
+	font-size: 17px;
+	padding: 12px 27px;
+	text-decoration: none;
+	background: #000000;
+	border-right: 1px solid #FFFFFF;
+	margin: -2px;
+	clear: right;
 }
 
 footer nav ul {
@@ -92,7 +142,7 @@ footer nav li {
 	float: left;
 }
 
-footer nav li a {
+footer nav li a{
 	list-style-type: none;
 	color: #CC0000;
 	font-family: 'Open Sans', serif;
@@ -104,29 +154,13 @@ footer nav li a {
 	text-decoration: none;
 }
 
-/*
-#footernav ul {
-	list-style-type: none;
-	display: inline;
+footer nav li.last a {
+	border-right: 0px;
 }
 
-
-#footernav li + li {
-    background:url('seperator.gif') no-repeat top left;
-    padding-left: 10px
-}
-
-#footernav li:before {
-	content: "  |  ";
-	border: 0;
-	height: 0;
-	color:#CCCCCD;
-    border-bottom: 0.5px solid rgba(255, 255, 255, 0.3);
-	}
-*/
 
 .clear:before, .clear:after {
-	content: "!";
+	content: ".";
 	display: block;
 	height: 0;
 	overflow: hidden;
@@ -143,4 +177,10 @@ footer {
 	padding-top: 30px;
 	padding-bottom: 80px;
 
+}
+
+* {
+     -moz-box-sizing: border-box; /* Firexfox */
+     -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
+     box-sizing: border-box; /* IE */
 }
