--- a/homework/Week5/style.css
+++ b/homework/Week5/style.css
@@ -11,26 +11,17 @@ header {
 	width: auto;
 	height: 120px;
 	background-color: #000000;
-	display: block;
+	padding-bottom: 10px;
+	border-bottom: 3px solid #EBE157;
 }
 
-
-aside {
-	width: 266px;
-}
-
-div {
-
-
-}
-
-#overlay {
-	position: relative;
-}
 
 footer {
-
-
+	clear: both;
+	background: black;
+	color: white;
+	font-size: 14px;
+	padding: 15px;
 }
 
 
@@ -45,23 +36,14 @@ h2 {
 	font-family: 'Roboto Condensed', sans-serif;
 	text-align: center;
 	background-color: #B1B1B3;
-	display: inline;
-	padding: 20px 141px;
+	padding: 20px;
+	margin-top: 0;
 }
 
-.strikethrough {
-	color: gray;
+h3, h4 {
+	font-family: 'Roboto Condensed', sans-serif;
 }
 
-.underline {
-	border-bottom: 4px solid gray;
-	border-bottom-color: yellow;
-}
-
-header div {
-	padding-bottom: 20px;
-	border-bottom: 4px solid #EBE157;
-}
 
 header nav a {
 	font-size: 20px;
@@ -74,17 +56,76 @@ header nav a {
 }
 
 
-img {
-	width: 100%;
-	height: auto;
+.mid{
+	height: 460px;
+	background-image:url(./images/coworking.jpg);
+	background-position: center; 
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+
+#overlay {
 	float: right;
-	clear: right;
-	margin-top: -28px;
+	height: 310px;
+	width: 210px;
+	background: rgba(245, 245, 245, 0.7);
+	padding: 20px 20px 18px; 
+	margin-right: 20px;
+}
+
+
+#overlay span {
+	color: black ;
+	font-family: 'Roboto Condensed', sans-serif;
+	display: block;
+	text-align: center;
+	background: #EBE157;
+	padding: 10px 10px;
+	border-radius: 4px;
+	box-shadow: 2px 4px 2px rgba(33,33,33,0.3);
+	margin-top: 30px;
+}
+
+.column span {
+	color: black ;
+	font-family: 'Roboto Condensed', sans-serif;
+	display: block;
+	text-align: center;
+	background: #B1B1B3;
+	padding: 10px 10px;
+	border-radius: 4px;
+	box-shadow: 2px 4px 2px rgba(33,33,33,0.3);
+	margin-top: 30px;
+}
+
+.column div {
+	float: left;
+	height: 200px;
+	width: 220px;
+	padding: 10px 23px;
+	margin-top: 10px;
+	margin-bottom: 50px;
+	border-right: 1px;
+	border-color: #CCC;
+	border-right-style: solid;
+}
+
+.column div:nth-child(3) {
+	border-right: 0;
 }
 
 .strikethrough {
+	color: gray;
 	text-decoration: line-through;
+
 }
+
+.underline {
+	border-bottom: 4px solid gray;
+	border-bottom-color: yellow;
+}
+
 
 .clear:before, .clear:after {
 	content: "\0020";
@@ -105,4 +146,7 @@ img {
 	line-height: 0;
 	height: 0;
 }
+
+
+
  
