--- a/lesson13/class_labs/boxes/css/boxing-media-query.css
+++ b/lesson13/class_labs/boxes/css/boxing-media-query.css
@@ -6,3 +6,167 @@
   line-height: 0;
   height: 0;
 }
+
+#container {
+	width: 100%;
+	margin: 0 auto;
+}
+
+header {
+	width: 100%;
+	margin: 0 auto;
+	height: 150px;
+	border: solid 5px;
+	box-sizing: border-box;
+	background-color: #F07241;
+}
+
+footer {
+	clear: left;
+	width: 100%;
+	height: 100px;
+	margin: 0 auto;
+	border: solid 5px;
+	box-sizing: border-box;
+}
+
+li:first-child {
+	visibility: hidden;
+	float: right;
+}
+
+nav li {
+	width: 10%;
+	height: 100px;
+	border: solid 3px;
+	margin: auto;
+	margin-right: 20px;
+	float: left;
+	padding-left: -20px;
+	background-color: #300030;
+}
+
+.red {
+	width: 100%;
+	height: 100px;
+	margin: 0 auto;
+	margin-top: 20px;
+	border: solid 5px;
+	box-sizing: border-box;
+	background-color: #480048;
+}
+
+.green {
+	width: 30%;
+	height: 100px;
+	border: solid 5px;
+	margin: 1.1%;
+	display: inline-block;
+	box-sizing: border-box;
+	background-color: #601848;
+}
+
+
+.blue {
+	border: 5px solid;
+	width: 30%;
+	height: 40px;
+	margin: 1.2%;
+	float: left;
+	box-sizing: border-box;
+	background-color: #C04848;
+}
+
+
+
+@media all and (min-width: 320px) and (max-width: 720px) {
+	.clearfix:after {
+	  content: ".";
+	  display: block;
+	  clear: both;
+	  visibility: hidden;
+	  line-height: 0;
+	  height: 0;
+	}
+
+	#container {
+		width: 100%;
+		margin: 0 auto;
+	}
+
+	header {
+		width: 100%;
+		margin: 0 auto;
+		height: 150px;
+		border: solid 5px;
+		box-sizing: border-box;
+		background-color: #F07241;
+	}
+
+	footer {
+		clear: left;
+		width: 100%;
+		height: auto;
+		margin: 0 auto;
+		border: solid 5px;
+		box-sizing: border-box;
+	}
+
+	nav li {
+		width: 10%;
+		height: 100px;
+		border: solid 3px;
+		margin: auto;
+		margin-right: 20px;
+		padding-left: -20px;
+		background-color: #300030;
+		visibility: hidden;
+	}
+
+	nav li:first-child {
+		float:right;
+		border: solid 5px;
+		height: 80px;
+		width: 10%;
+		visibility: visible;
+	}
+
+	.line {
+		border: solid 5px;
+		width: 40px;
+		margin: 0 auto;
+		padding-top: 10px;
+		margin-top: 5px;	
+	}
+
+	.red {
+		width: 100%;
+		height: 100px;
+		margin: 0 auto;
+		margin-top: 20px;
+		border: solid 5px;
+		box-sizing: border-box;
+		background-color: #480048;
+	}
+
+	.green {
+		width: 100%;
+		height: 100px;
+		border: solid 5px;
+		margin: 1.1%;
+		box-sizing: border-box;
+		background-color: #601848;
+	}
+
+
+	.blue {
+		border: 5px solid;
+		width: 97%;
+		height: 40px;
+		margin: 1.2%;
+		box-sizing: border-box;
+		background-color: #C04848;
+		display: inline-block;
+	}
+}
+
